--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>v2_htxt</title><script defer="defer" type="module" src="js/chunk-vendors.4ab16852.js"></script><script defer="defer" type="module" src="js/app.adc069e6.js"></script><link href="css/chunk-vendors.130d95d6.css" rel="stylesheet"><link href="css/app.7e5de6f6.css" rel="stylesheet"><script defer="defer" src="js/chunk-vendors-legacy.cf58ba6d.js" nomodule></script><script defer="defer" src="js/app-legacy.f8efcdc4.js" nomodule></script></head><body><noscript><strong>We're sorry but v2_htxt doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <link rel="icon" href="favicon.ico">
+    <title>v2_htxt</title>
+    <script defer="defer" type="module" src="js/chunk-vendors.4ab16852.js"></script>
+    <script defer="defer" type="module" src="js/app.adc069e6.js"></script>
+    <link href="css/chunk-vendors.130d95d6.css" rel="stylesheet">
+    <link href="css/app.7e5de6f6.css" rel="stylesheet">
+    <script defer="defer" src="js/chunk-vendors-legacy.cf58ba6d.js" nomodule></script>
+    <script defer="defer" src="js/app-legacy.f8efcdc4.js" nomodule></script>
+</head>
+
+<body><noscript><strong>We're sorry but v2_htxt doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+</body>
+
+</html>
